[package]
name = "mdbook-jupyter"
description = "enables using jupyter notebooks in mdbook"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/rojesh-shikhrakar/mdbook-jupyter"
authors = ["Rojesh M Shikhrakar"]
license = "MIT"
keywords = ["mdbook", "markdown", "jupyter", "notebook", "ipynb"]
readme = "README.md"

[[bin]]
name = "mdbook-jupyter"
path = "src/main.rs"

[lib]
name = "mdbook_jupyter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
mdbook = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
semver = "1.0"
base64 = "0.22.1"
